# playpen

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
clemcore/backends/: vllm_api.py
docs/: howto_add_games.md  howto_basic_backend_usage.md  howto_prototype_games.ipynb  howto_run_benchmark.md  howto_update_to_v1.md  howto_use_llama-cpp_backend.md  logging_and_scoring.md  the_annotated_hellogame.ipynb
evaluation/: bencheval.py  evalutils.py  makingtables.py  papereval.py  plotting.py
game-to-integrate/games/chatgame/: game.py  master.py
game-to-integrate/games/cloudgame/: instancegenerator.py  master.py
game-to-integrate/games/codenames/: instancegenerator.py  master.py  players.py  scorer.py
game-to-integrate/games/hellogame/: instancegenerator.py  master.py
game-to-integrate/games/imagegame/: game.py  instancegenerator.py  master.py
playpen/agents/: __init__.py  base_agent.py  clembench_agent.py  zeroshot_llm_agent.py
playpen/backends/: __init__.py  alephalpha_api.py  anthropic_api.py  cohere_api.py  google_api.py  huggingface_local_api.py  huggingface_multimodal_api.py  llamacpp_api.py  mistral_api.py  model_registry.json  openai_api.py  openai_compatible_api.py  utils.py  vllm_api.py
playpen/clemgame/: __init__.py  benchmark.py  clemgame.py  transcript_utils.py
playpen/playpengame/: __init__.py  benchmark.py  playpengame.py  transcript_utils.py
playpen/utils/: run_utils.py
scripts/: cli.py
tests/: test_backend.py  test_benchmark.py  test_huggingface_local_api.py  test_logging.py  test_model_spec.py  test_taboo.py
(+123 files in other folders)
